# HomePanel

./: .ci-trigger-playback-panel-final  .ci-trigger-stationhead-final  .gitignore  README.md  THIRD_PARTY_NOTICES.md  build.bat  register-homepanel-startup-task.ps1  validation-secondary-auth-probe.txt
.github/: agent-native-cache-error.txt
.github/scripts/: apply-native-cache.py  apply_stationhead_recovery.py  audit-cloudflare-daily-usage.py  audit-cloudflare-telemetry.py  build-radar-frames.py  check-d1-daily-budget.mjs  patch_octopus_profile_chart.py  publish-homepanel-observability-status.mjs  query-cloudflare-d1-insights.mjs  remove_stationhead_css_block.py  test_build_radar_frames.py
.github/workflows/: agent-native-cache-apply.yml  agent-native-cache-pr.yml  agent-stationhead-recovery-patch.yml  agent-video-initial-feed-1000.yml  apply-energy-renderer.yml  apply-music-daily-count-fix.yml  apply-renderer-panel-reorganization.yml  apply-startup-order-fix.yml  apply-stationhead-creation-watchdog.yml  apply-stationhead-followup-fixes.yml  apply-stationhead-realtime-fix.yml  apply-stationhead-webview-isolation.yml  cloud-deploy.yml  cloudflare-build-diagnostics.yml  cloudflare-pr-diagnostics.yml  diagnose-secondary-state-fix.yml  environment-history-deploy-audit.yml  export-cleaned-tree.yml  fetch-cloudflare-observability.yml  fix-energy-renderer-type.yml  homepanel-unified-ci.yml  homepanel-unified-cutover.yml  native-updater-analysis.yml  native-windows-build.yml  ops-diagnose-video-freeze.yml  ops-disable-cloudflare-git-builds.yml  ops-inspect-video-auto-reset.yml  ops-videoscraper-cutover-once.yml  ops-videoscraper-cutover-pr.yml  radar-cycle-key-r2-audit.yml  radar-failed-run-log-audit.yml  radar-frames.yml  radar-r2-health-audit.yml  radar-workflow-reactivation.yml  retire-homepanel-cloud.yml  retire-videoscraper.yml  run-startup-order-fix.yml  run-vp-migration.yml  run-vp-workflow-port.yml  sh-refactor-scan.yml  (+9 more)
cloud/: D1_QUERY_INSIGHTS.md  README.md  package.json  wrangler.jsonc  wrangler.test.jsonc
cloud/migrations/: 202607081200_reenable_cloud_radar.sql  202607101300_update_check_job.sql  202607101400_update_check_interval.sql  202607102330_stationhead_health_job.sql  202607111200_telemetry_bucket_applied.sql  2026071901_command_index.sql  202607190700_update_check_fallback_interval.sql  20260719_environment_bucket_time_index.sql  202607210400_video_runtime_activation.sql  202607220100_resource_budget_3000.sql  202607230500_d1_read_hotspots.sql  202607230600_video_liveness_eligibility.sql  202607240100_octopus_daily_stable_only.sql  202607240200_d1_runtime_reduction.sql  202607240300_d1_runtime_bugfixes.sql
cloud/optimization-scopes/: remote-migrations.md  telemetry-aggregation.md  telemetry-claim.md
cloud/scripts/: d1-import-utils.mjs  deploy-existing.mjs  guarded-deploy.mjs  migrate-videoscraper-d1.mjs  validate-cloudflare-diagnostics.mjs
cloud/src/: admin.ts  auth.ts  crypto_cache.ts  dashboard_cache.ts  device_command_delivery.ts  device_control.ts  device_exchange.ts  device_sync.ts  environment_r2.ts  octopus_history.ts  octopus_source.ts  radar_bundle.ts  radar_bundle_cache.ts  radar_bundle_prewarm.ts  radar_dispatch.ts  radar_source.ts  radar_tile.ts  refresh_jobs.ts  scheduler.ts  scheduler_coordinator.ts  scheduler_runtime.ts  scheduler_tick.ts  snapshot.ts  sources.ts  spotify_source.ts  state_generation.ts  state_hash_cache.ts  stationhead_health.ts  switchbot_api.ts  telemetry_bucket.ts  telemetry_compact.ts  telemetry_heartbeat.ts  telemetry_history.ts  telemetry_route.ts  unified_worker.js  update_check.ts  update_proxy.ts  video_liveness.ts  video_runtime_activation.js  week_comparison.ts  (+2 more)
cloud/test/: .retain-environment-history.marker  audit_regressions.integration.test.ts  d1_import_utils.test.js  d1_meta_commands.integration.test.ts  d1_read_hotspots.integration.test.ts  d1_test_utils.ts  dashboard_payload_cache.test.ts  device_command_ack_contract.integration.test.ts  device_command_dedupe_index.integration.test.ts  device_exchange.integration.test.ts  device_sync_fast_path.test.ts  octopus_history.integration.test.ts  octopus_idempotent_writes.integration.test.ts  octopus_profile.test.ts  octopus_refresh_window.test.ts  octopus_schedule.integration.test.ts  radar_bundle.test.ts  (+34 more)
docs/: dashboard-modernization-2026-06-29.md
native/: CMakeLists.txt  rebuild-trigger.txt
native/cmake/: write_version_files.cmake
native/docs/: runtime-assets.md
native/resources/: HomePanel.rc.in
native/scripts/: capture-stationhead-network.ps1  register-task.ps1  reorganize_renderer_panels_once.py  verify_sh_playback_api.ps1
native/scripts/ui/: air-history.css  air-history.js  app.js  homepanel-air.js  homepanel-core.js  homepanel-radar.js  homepanel-runtime.js  homepanel-weather.js  index.html  playback-shared.js  runtime-performance.js  sh-audio-controls.css  spotify-panel-runtime.js  styles.css  ui-overrides.css
native/src/: app.cpp  app.h  app_air_history.cpp  app_commands.cpp  app_messages.cpp  app_stationhead_handles.cpp  app_stationhead_handles.h  app_stationhead_history.cpp  app_stationhead_state.cpp  app_update.cpp  artwork_cache.h  cloud_client.cpp  cloud_client.h  cloud_client_exchange.inc  cloud_client_http.cpp  cloud_client_sync.cpp  cloud_config.cpp  cloud_spotify_auth_impl.inc  common.h  config.cpp  config.h  dashboard_data.cpp  dashboard_data.h  dashboard_native_minute_facts.cpp  dashboard_native_playback.cpp  dashboard_playback_resolve.cpp  dashboard_state_build_optimized.cpp  dashboard_state_common_optimized.cpp  dashboard_state_player.cpp  dashboard_state_render_optimized.cpp  dashboard_state_sensors.cpp  embedded_ui.cpp  file_utils.h  json_helpers.h  logger.cpp  logger.h  main.cpp  render_state.h  renderer_bitmap_cache.cpp  renderer_clock_weather.cpp  (+49 more)
native/src/renderer_panels/: data_sections.inc  environment_sections.inc  layout_overrides.inc  media_section.inc  part1.inc  part2.inc  part3.inc  part4.inc  primitives.inc  windows.inc
tools/: apply_stationhead_window_fixes.py
video/: MIGRATION.md  wrangler.jsonc
(+25 files in other folders)
